# so-humanify

./: .gitignore  README.md  README_zh.md  cli.py  pyproject.toml  requirements.txt
backends/ghidra/: apply_renames.py  export_features.py
backends/rizin/: export_features_rizin.py
bridge/: jni_map_from_frida.js
humanify/: feature_pack.py  llm_runner.py  post_rules.py
humanify/llm_prompts/: rename_template.md
