[project]
name = "so-humanify"
version = "0.1.0"
description = "LLM-driven semantic humanification pipeline for Android .so binaries"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Your Name", email = "you@example.com"}]
dependencies = [
  "typer>=0.12",
  "rich>=13",
  "tqdm>=4.66",
  "orjson>=3.9",
  "pydantic>=2.7",
  "openai>=1.40",
  "r2pipe>=1.7",
  "python-dotenv>=1.0",
]

[project.scripts]
sohumanify = "cli:app"
